kubernetes/monitoring/homeprod/grafana/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: monitoring-grafana
      app.kubernetes.io/name: grafana
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: haproxy-controller
          podSelector:
            matchLabels:
              app.kubernetes.io/name: kubernetes-ingress
      ports:
        - port: 3000
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: kube-prom
              app.kubernetes.io/name: prometheus
      ports:
        - port: 9090
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: monitoring
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: monitoring-grafana
      app.kubernetes.io/name: grafana
  egress:
    - toEntities:
      - kube-apiserver
